Fix code block overflow issue

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -138,6 +138,7 @@ a:hover { text-decoration: underline; }
     font-size: 13px;
     line-height: 1.5em;
     margin: 40px 0;
+    overflow: scroll;
   }
 }
 
